--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
-  
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
+
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
   
